--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: gsplyr
-Title: What the Package Does (One Line, Title Case)
+Title: Google Slides Manipulation
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Howard", "Baek", , "howardbaek.fh@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "009-0000-8942-1618"))
+Description: The goal of gsplyr is to provide a set of functions designed for the manipulation of Google Slides.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
